# bevy-road

./: Cargo.toml  README.md
assets/models/: arrow.blend  arrow.glb
assets/shaders/: curves.wgsl  material.wgsl  world.wgsl
bevy_road-core/: Cargo.toml
bevy_road-core/src/: lane.rs  lib.rs  odr_spiral.rs  polynomal.rs  reference_line.rs  road.rs
bevy_road-core/src/geometry/: mod.rs  odr_spiral.rs
building/: Cargo.toml
building/src/: lib.rs
opendrive/: Cargo.toml
opendrive/src/: lib.rs  util.rs
opendrive/src/core/: geo_reference.rs  header.rs  mod.rs  offset.rs
opendrive/src/junction/: contact_point.rs  element_dir.rs  mod.rs
opendrive/src/lane/: border.rs  center.rs  center_lane.rs  height.rs  lane_choice.rs  lane_link.rs  lane_section.rs  lane_type.rs  lanes.rs  left.rs  left_lane.rs  material.rs  mod.rs  offset.rs  predecessor_successor.rs  right.rs  right_lane.rs  rule.rs  speed.rs  type_link.rs  width.rs
opendrive/src/lane/access/: mod.rs  restriction_type.rs  rule.rs
opendrive/src/lane/road_mark/: color.rs  explicit.rs  explicit_line.rs  lane_change.rs  mod.rs  rule.rs  sway.rs  type.rs  type_simplified.rs  weight.rs
opendrive/src/road/: element_type.rs  link.rs  mod.rs  predecessor_successor.rs  road_type.rs  road_type_e.rs  rule.rs  speed.rs  unit.rs
opendrive/src/road/geometry/: arc.rs  geometry_type.rs  line.rs  mod.rs  plan_view.rs  spiral.rs
opendrive/src/road/profile/: elevation.rs  lateral_profile.rs  mod.rs  shape.rs  super_elevation.rs
opendrive/tests/: read_xodr.rs
opendrive/tests/data/: Ex_Camber_Straight_Profile.xodr  Ex_LHT-Complex-X-Junction.xodr  Ex_Line-Spiral-Arc.xodr  Ex_Simple-LaneOffset.xodr  Ex_Slip_Lane.xodr  arc.xodr  bridge.xodr  clothoid.xodr  elevation.xodr  highway_example.xodr  junction.xodr  lane_merge.xodr  straight.xodr
src/: camera.rs  debug.rs  flycam.rs  main.rs  mesh_generator.rs  mouse_picking.rs  raycast.rs  road.rs  states.rs  utility.rs
src/road/: arc.rs  biarc.rs  builder.rs  collision.rs  connection.rs  control.rs  edge.rs  line.rs  mod.rs  node.rs  nodegroup.rs  placeholder.rs  shader.rs  world.rs
src/road/curves/: arc.rs  biarc.rs  mod.rs
viewer/: Cargo.toml
viewer/src/: camera.rs  debug.rs  main.rs  states.rs
viewer/src/road/: mod.rs
viewer/src/road/geometry/: mod.rs
visualization/: Cargo.toml
