[package]
name = "bevy-road"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.12.1"
bevy-inspector-egui = "0.22.1"
bevy_mod_picking = "0.17.0"
itertools = "0.12.0"
petgraph = "0.6.4"
bevy_prototype_debug_lines = { git = "https://github.com/Sophya/bevy_debug_lines.git", branch = "fix/upgrade-bevy-0.12", features = ["3d"]}
