[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", features = ["file_watcher"] }
bevy-inspector-egui = "0.23"
ordered-float = { version = "4.2.0" }

bevy_road-core = { path = "../bevy_road-core" }
building = { path = "../building" }
rfd = "0.14.1"
futures-lite = "2.3.0"
smooth-bevy-cameras = "0.11.0"
